test/errors/scan_invalid_char1.py
$this_is_not_basic = 42
