test/errors/scan_invalid_char1.py.expected
test/errors/scan_invalid_char1.py:1 error: unexpected input char `$`
